--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,35 @@
 astroid==2.0.1
+async-generator==1.10
+attrs==22.1.0
 beautifulsoup4==4.11.1
 bs4==0.0.1
+certifi==2022.6.15
+cffi==1.15.1
 colorama==0.3.9
+h11==0.13.0
+idna==3.3
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
-pylint==2.0.0
+MouseInfo==0.1.3
+outcome==1.2.0
+Pillow==9.3.0
+PyAutoGUI==0.9.53
+pycparser==2.21
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyperclip==1.8.2
+PyRect==0.2.0
+PyScreeze==0.1.28
+PySocks==1.7.1
+pytweening==1.0.4
 selenium==4.4.3
 six==1.11.0
-typed-ast==1.1.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+trio==0.21.0
+trio-websocket==0.9.2
+urllib3==1.26.11
 wrapt==1.10.11
-pyautogui==0.9.48
+wsproto==1.1.0
