swapping in new config

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ PyGetWindow==0.0.9
 PyMsgBox==1.0.9
 pyperclip==1.8.2
 PyRect==0.2.0
+python-dotenv==0.21.1
 PyScreeze==0.1.28
 PySocks==1.7.1
 pytweening==1.0.4
