--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ mccabe==0.6.1
 MouseInfo==0.1.3
 outcome==1.2.0
 Pillow==10.3.0
-PyAutoGUI==0.9.53
 pycparser==2.21
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
@@ -35,4 +34,6 @@ urllib3==1.26.19
 wrapt==1.10.11
 wsproto==1.1.0
 # if running on macos
-pyobjc==10.3.1
+# pyobjc==10.3.1
+# if running on windows
+# PyAutoGUI==0.9.53
